feat: add cooldown button + fix bugs

--- a/styles/button.scss
+++ b/styles/button.scss
@@ -18,6 +18,24 @@ a {
     justify-content: center;
     gap: 20px;
 
+    &.disabled{
+      opacity: 0.1;
+      background: rgba(35, 247, 221, 0.38);
+      color: black;
+
+      .icon-wolf{
+        background: url('/wolf-black.png') center center!important;
+        background-size: cover !important;
+      }
+
+      &:hover {
+        background: rgba(35, 247, 221, 0.6);
+        color: #050801;
+        box-shadow: 0 0 10px $primary!important;
+        cursor: not-allowed;
+      }
+    }
+
     .icon-wolf {
       width: 25px;
       height: 25px;
